env-test/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: test
  labels:
    name: postgres-db
    type: back-end
    app: user-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: postgres-db
        type: back-end
        app: user-service
    spec:
      containers:
        - name: postgres-container
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["psql", "-w", "-U", "tester-app", "-d", "user-service-db", "-c", "SELECT 1"]
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command: ["psql", "-w", "-U", "tester-app", "-d", "user-service-db", "-c", "SELECT 1"]
            initialDelaySeconds: 45
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /var/lib/postgres-db-env-test/data
              name: postgres-db
      volumes:
        - name: postgres-db
          persistentVolumeClaim:
            claimName: postgres-db
  selector:
    matchLabels:
      name: postgres-db
      type: back-end
      app: user-service
